build: variables.json import문 추가

--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -83,6 +83,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
     - ${AIRFLOW_PROJ_DIR:-.}/data:/opt/airflow/data
+    - ${AIRFLOW_PROJ_DIR:-.}/variables.json:/opt/airflow/variables.json
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -243,6 +244,9 @@ services:
         mkdir -p /sources/logs /sources/dags /sources/plugins /sources/data
         chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins, data}
         exec /entrypoint airflow version
+        airflow db init
+        airflow variables import /opt/airflow/variables.json || true
+
     # yamllint enable rule:line-length
     environment:
       <<: *airflow-common-env
